--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+.App{
+    text-align: center;
+    font-family: Arial;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.selected {
+    background: #fdfd96 !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.options {
+    padding: 8px;
+    border: 3px solid #000;
+    cursor: pointer;
+    width:100%;
+    background-color: white;
+    color: steelblue;
+    font-weight: bold;
+    border-radius: 7px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ul {
+    list-style-type: none;
 }
 
-.App-link {
-  color: #61dafb;
+ul li {
+    margin: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+body{
+    display: flex;
+    justify-content: center;    
+    color:rgb(24, 20, 20);
+    font-size: 18px;
+    background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 100%);
+ }
+ button{
+    background-color: #6ba0fc; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+ }
+ button:disabled{
+    background-color: #696969; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+ }
